dnl Process this file with autoconf to produce a configure script.

dnl We need at least autoconf 2.69 for this configure.ac to work.
AC_PREREQ([2.69])
AC_INIT([e-antic], [1.0.0-rc.12], [vincent.delecroix@math.cnrs.fr])

AC_CONFIG_MACRO_DIR([m4])
AM_INIT_AUTOMAKE([1.14.1 subdir-objects tar-pax foreign])

AC_CONFIG_FILES([Makefile])

AC_CONFIG_SUBDIRS([libeantic pyeantic])

AC_OUTPUT
